--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Tue, Nov 7, 2023, 8:33:02 PM EST.
+ * Last generated using `./tsconfig.mjs` Wed, Nov 8, 2023, 7:06:15 AM EST.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
