--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Tue, Nov 7, 2023, 8:33:02 PM EST.
+# Last generated Wed, Nov 8, 2023, 7:06:15 AM EST.
 
 [production]
 last 1 chrome versions
