Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.426",
+    "version": "1.0.427",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -253,13 +253,13 @@
         "@medv/finder": "^3.1.0",
         "@preact/signals": "^1.2.1",
         "color2k": "^2.0.2",
+        "dayjs": "^1.11.10",
         "ignore": "^5.2.4",
         "ip-regex": "^5.0.0",
-        "luxon": "^3.4.3",
         "micro-memoize": "^4.1.2",
         "micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.73",
         "parse-css-color": "^0.2.1",
-        "preact": "^10.18.2",
+        "preact": "^10.19.1",
         "preact-render-to-string": "^6.3.0",
         "react": "npm:@preact/compat@^17.1.2",
         "react-dom": "npm:@preact/compat@^17.1.2",
