--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Fri, Nov 10, 2023, 8:46:29 AM EST.
+# Last generated using `./wrangler.mjs` Nov 11, 2023 12:40 PM UTC.
 ##
 
 send_metrics = false
