--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Fri, Nov 10, 2023, 8:46:27 AM EST.
+ * Last generated using `./settings.mjs` Nov 11, 2023 12:40 PM UTC.
  */
 {
     "editor.formatOnType": false,
