--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Fri, Nov 10, 2023, 8:46:28 AM EST.
+# Last generated Nov 11, 2023 12:40 PM UTC.
 
 # Locals
 
