--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Nov 13, 2023 10:04 PM UTC.
+ * Last generated using `./tsconfig.mjs` Nov 14, 2023 1:27 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
