--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Nov 13, 2023 10:04 PM UTC.
+# Last generated using `./wrangler.mjs` Nov 14, 2023 1:27 AM UTC.
 ##
 
 send_metrics = false
