--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 15, 2023 2:52 AM UTC.
+# Last generated Nov 15, 2023 2:00 PM UTC.
 
 [production]
 last 1 chrome versions
