--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 15, 2023 2:52 AM UTC.
+# Last generated Nov 15, 2023 2:00 PM UTC.
 
 # Locals
 
