--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Nov 15, 2023 2:52 AM UTC.
+ * Last generated using `./settings.mjs` Nov 15, 2023 2:00 PM UTC.
  */
 {
     "editor.formatOnType": false,
