--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 16, 2023 5:14 AM UTC.
+# Last generated Nov 17, 2023 7:41 PM UTC.
 
 [production]
 last 1 chrome versions
