--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Nov 16, 2023 5:14 AM UTC.
+ * Last generated using `./settings.mjs` Nov 17, 2023 7:41 PM UTC.
  */
 {
     "editor.formatOnType": false,
