--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 17, 2023 10:17 PM UTC.
+# Last generated Nov 18, 2023 2:57 AM UTC.
 
 # Locals
 
