--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 18, 2023 7:32 PM UTC.
+# Last generated Nov 19, 2023 2:17 AM UTC.
 
 [production]
 last 1 chrome versions
