--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Nov 18, 2023 7:32 PM UTC.
+ * Last generated using `./settings.mjs` Nov 19, 2023 2:17 AM UTC.
  */
 {
     "editor.formatOnType": false,
