--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Nov 18, 2023 7:32 PM UTC.
+ * Last generated using `./tsconfig.mjs` Nov 19, 2023 2:17 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
