--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Nov 18, 2023 7:32 PM UTC.
+# Last generated using `./wrangler.mjs` Nov 19, 2023 2:17 AM UTC.
 ##
 
 send_metrics = false
