--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 19, 2023 4:04 AM UTC.
+# Last generated Nov 19, 2023 5:04 PM UTC.
 
 [production]
 last 1 chrome versions
