--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 19, 2023 4:04 AM UTC.
+# Last generated Nov 19, 2023 5:04 PM UTC.
 
 # Locals
 
