--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Nov 19, 2023 4:04 AM UTC.
+ * Last generated using `./tsconfig.mjs` Nov 19, 2023 5:04 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
