--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Nov 19, 2023 4:04 AM UTC.
+# Last generated using `./wrangler.mjs` Nov 19, 2023 5:04 PM UTC.
 ##
 
 send_metrics = false
