Project update. [p][robotic]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Nov 19, 2023 5:04 PM UTC.
+ * Last generated using `./tsconfig.mjs` Nov 20, 2023 3:09 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
@@ -136,12 +136,19 @@
     "mdx": {
         "plugins": [
             "remark-frontmatter",
+            [
+                "remark-mdx-frontmatter",
+                {
+                    "name": "frontMatter"
+                }
+            ],
             "remark-gfm",
             "remark-smartypants",
             [
                 "remark-oembed",
                 {
-                    "syncWidget": true
+                    "syncWidget": true,
+                    "jsx": true
                 }
             ],
             "remark-mermaidjs",
