--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 20, 2023 5:07 AM UTC.
+# Last generated Nov 20, 2023 11:37 PM UTC.
 
 [production]
 last 1 chrome versions
