--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 20, 2023 5:07 AM UTC.
+# Last generated Nov 20, 2023 11:37 PM UTC.
 
 # Locals
 
