Project update. [p][robotic]

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 20, 2023 11:37 PM UTC.
+# Last generated Nov 21, 2023 11:16 AM UTC.
 
 # Default
 
