--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Nov 20, 2023 11:37 PM UTC.
+ * Last generated using `./settings.mjs` Nov 21, 2023 11:16 AM UTC.
  */
 {
     "editor.formatOnType": false,
