--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Nov 20, 2023 11:37 PM UTC.
+ * Last generated using `./tsconfig.mjs` Nov 21, 2023 11:16 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
