--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Nov 22, 2023 7:16 AM UTC.
+ * Last generated using `./tsconfig.mjs` Nov 26, 2023 4:15 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
@@ -142,15 +142,13 @@
                     "name": "frontMatter"
                 }
             ],
-            "remark-gfm",
-            "remark-smartypants",
             [
-                "remark-oembed",
+                "remark-gfm",
                 {
-                    "syncWidget": true,
-                    "jsx": true
+                    "singleTilde": false
                 }
             ],
+            "remark-smartypants",
             "remark-mermaidjs",
             "remark-directive"
         ]
