--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.473",
+    "version": "1.0.474",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -265,27 +265,25 @@
     },
     "dependencies": {},
     "peerDependencies": {
-        "@medv/finder": "^3.1.0",
-        "@preact/signals": "^1.2.2",
-        "color2k": "^2.0.2",
-        "dayjs": "^1.11.10",
-        "ignore": "^5.3.0",
-        "ip-regex": "^5.0.0",
-        "micro-memoize": "^4.1.2",
+        "@medv/finder": "3.1.0",
+        "@preact/signals": "1.2.2",
+        "color2k": "2.0.2",
+        "dayjs": "1.11.10",
+        "ignore": "5.3.0",
+        "ip-regex": "5.0.0",
+        "micro-memoize": "4.1.2",
         "micromatch": "npm:@clevercanyon/micromatch.fork@^4.0.74",
-        "parse-css-color": "^0.2.1",
-        "preact": "^10.19.2",
-        "preact-render-to-string": "^6.3.1",
-        "react": "npm:@preact/compat@^17.1.2",
-        "react-dom": "npm:@preact/compat@^17.1.2",
-        "semver": "^7.5.4",
-        "tailwindcss": "^3.3.5"
+        "parse-css-color": "0.2.1",
+        "preact": "10.19.2",
+        "preact-render-to-string": "6.3.1",
+        "semver": "7.5.4",
+        "tailwindcss": "3.3.5"
     },
     "peerDependenciesMeta": {},
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.272"
+        "@clevercanyon/dev-deps": "^1.0.274"
     },
     "overrides": {},
     "cpu": ["x64", "arm64"],
