--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Nov 26, 2023 7:34 AM UTC.
+ * Last generated using `./settings.mjs` Nov 26, 2023 8:29 AM UTC.
  */
 {
     "editor.formatOnType": false,
@@ -219,6 +219,7 @@
     "eslint.lintTask.enable": false,
     "eslint.run": "onType",
     "eslint.runtime": "node",
+    "eslint.useESLintClass": true,
     "eslint.codeActionsOnSave.mode": "all",
     "eslint.experimental.useFlatConfig": true,
     "eslint.workingDirectories": [
