--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Nov 26, 2023 11:24 AM UTC.
+ * Last generated using `./tsconfig.mjs` Nov 27, 2023 11:07 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
@@ -148,9 +148,16 @@
                     "singleTilde": false
                 }
             ],
+            "remark-gemoji",
             "remark-smartypants",
-            "remark-mermaidjs",
-            "remark-directive"
+            "remark-directive",
+            [
+                "remark-toc",
+                {
+                    "heading": "Table of Contents",
+                    "prefix": "~"
+                }
+            ]
         ]
     }
 }
