--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 27, 2023 11:07 AM UTC.
+# Last generated Nov 27, 2023 1:45 PM UTC.
 
 # Default
 
