--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Nov 27, 2023 11:07 AM UTC.
+ * Last generated using `./tsconfig.mjs` Nov 27, 2023 1:45 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
