--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Nov 27, 2023 11:07 AM UTC.
+# Last generated using `./wrangler.mjs` Nov 27, 2023 1:45 PM UTC.
 ##
 
 send_metrics = false
