--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Nov 27, 2023 1:45 PM UTC.
+ * Last generated using `./tsconfig.mjs` Nov 27, 2023 5:19 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
@@ -135,7 +135,7 @@
     },
     "mdx": {
         "plugins": [
-            "remark-frontmatter",
+            ["remark-frontmatter"],
             [
                 "remark-mdx-frontmatter",
                 {
@@ -148,9 +148,9 @@
                     "singleTilde": false
                 }
             ],
-            "remark-gemoji",
-            "remark-smartypants",
-            "remark-directive",
+            ["remark-gemoji"],
+            ["remark-smartypants"],
+            ["remark-directive"],
             [
                 "remark-toc",
                 {
