--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 27, 2023 10:37 PM UTC.
+# Last generated Nov 28, 2023 8:59 AM UTC.
 
 # Locals
 
