--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Nov 27, 2023 10:37 PM UTC.
+ * Last generated using `./tsconfig.mjs` Nov 28, 2023 9:52 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
