Project update. [p][robotic]

--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Nov 30, 2023 2:56 AM UTC.
+# Last generated Dec 1, 2023 3:47 PM UTC.
 
 [production]
 node >= 20.9.0
