--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Nov 30, 2023 2:56 AM UTC.
+# Last generated using `./wrangler.mjs` Dec 1, 2023 3:47 PM UTC.
 ##
 
 send_metrics = false
