Project update. [p][robotic]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Dec 2, 2023 5:20 PM UTC.
+ * Last generated using `./tsconfig.mjs` Dec 2, 2023 11:11 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
@@ -98,6 +98,7 @@
     "compilerOptions": {
         "baseUrl": "./src",
         "rootDir": "./src",
+        "outDir": "./dist",
         "declarationDir": "./dist/types",
         "declaration": true,
         "declarationMap": false,
