--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.499",
+    "version": "1.0.500",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -292,7 +292,8 @@
     "optionalDependencies": {},
     "bundleDependencies": [],
     "devDependencies": {
-        "@clevercanyon/dev-deps": "^1.0.284"
+        "@clevercanyon/dev-deps": "^1.0.284",
+        "vite-plugin-dts": "^3.6.4"
     },
     "overrides": {},
     "cpu": ["x64", "arm64"],
