Project update. [p][robotic]

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Dec 2, 2023 11:11 PM UTC.
+ * Last generated using `./tsconfig.mjs` Dec 3, 2023 9:56 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
@@ -96,13 +96,13 @@
         "**/*.readme.*/**"
     ],
     "compilerOptions": {
+        "noEmit": true,
+        "declaration": true,
+        "declarationMap": false,
         "baseUrl": "./src",
         "rootDir": "./src",
         "outDir": "./dist",
         "declarationDir": "./dist/types",
-        "declaration": true,
-        "declarationMap": false,
-        "emitDeclarationOnly": true,
         "strict": true,
         "skipLibCheck": true,
         "target": "es2022",
@@ -163,14 +163,5 @@
                 }
             ]
         ]
-    },
-    "tsc-alias": {
-        "debug": true,
-        "silent": false,
-        "verbose": true,
-        "fileExtensions": {
-            "inputGlob": "d.{ts,tsx,mts,mtsx,cts,ctsx}",
-            "outputCheck": ["js", "jsx", "mjs", "mjsx", "cjs", "cjsx", "ts", "tsx", "mts", "mtsx", "cts", "ctsx"]
-        }
     }
 }
