--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 2, 2023 11:11 PM UTC.
+# Last generated Dec 3, 2023 9:56 AM UTC.
 
 # Locals
 
