--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,11 +7,10 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Dec 3, 2023 10:52 AM UTC.
+# Last generated using `./wrangler.mjs` Dec 5, 2023 10:34 AM UTC.
 ##
 
 send_metrics = false
-usage_model = "bundled"
 compatibility_date = "2023-08-15"
 compatibility_flags = [ ]
 account_id = "f1176464a976947aa5665d989814a4b1"
@@ -419,10 +418,13 @@ pattern = "workers.hop.gdn/utilities/*"
 [env.dev]
 workers_dev = false
 
+  [env.dev.vars]
+  WRANGLER = "env=dev"
+
   [env.dev.build]
   command = "npx @clevercanyon/madrun build --mode=dev"
 
 [dev]
-ip = "0.0.0.0"
 local_protocol = "https"
+ip = "0.0.0.0"
 port = 443
