--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 5, 2023 10:34 AM UTC.
+# Last generated Dec 5, 2023 1:04 PM UTC.
 
 # Locals
 
