--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Dec 5, 2023 10:34 AM UTC.
+ * Last generated using `./settings.mjs` Dec 5, 2023 1:04 PM UTC.
  */
 {
     "editor.formatOnType": false,
