Project update. [p][robotic]

--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 5, 2023 1:49 PM UTC.
+# Last generated Dec 6, 2023 2:18 AM UTC.
 
 # Packages
 
