--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Dec 5, 2023 1:49 PM UTC.
+# Last generated using `./wrangler.mjs` Dec 6, 2023 2:18 AM UTC.
 ##
 
 send_metrics = false
