--- a/.dockerignore
+++ b/.dockerignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 6, 2023 2:18 AM UTC.
+# Last generated Dec 6, 2023 3:35 PM UTC.
 
 # Locals
 
