--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 7, 2023 11:22 PM UTC.
+# Last generated Dec 8, 2023 1:25 AM UTC.
 
 # Locals
 
