--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Dec 7, 2023 11:22 PM UTC.
+ * Last generated using `./tsconfig.mjs` Dec 8, 2023 1:25 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
