--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Dec 7, 2023 11:22 PM UTC.
+# Last generated using `./wrangler.mjs` Dec 8, 2023 1:25 AM UTC.
 ##
 
 send_metrics = false
