Project update. [p][robotic]

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Dec 8, 2023 1:25 AM UTC.
+# Last generated using `./wrangler.mjs` Dec 8, 2023 1:59 AM UTC.
 ##
 
 send_metrics = false
@@ -419,7 +419,7 @@ pattern = "workers.hop.gdn/utilities/*"
 workers_dev = false
 
   [env.dev.vars]
-  WRANGLER = "env=dev"
+  MINIFLARE = "true"
 
   [env.dev.build]
   command = "npx @clevercanyon/madrun build --mode=stage"
