--- a/.dockerignore
+++ b/.dockerignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 8, 2023 5:10 AM UTC.
+# Last generated Dec 8, 2023 3:44 PM UTC.
 
 # Locals
 
