--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 8, 2023 10:28 PM UTC.
+# Last generated Dec 9, 2023 5:56 AM UTC.
 
 # Default
 
