--- a/.dockerignore
+++ b/.dockerignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 9, 2023 9:09 AM UTC.
+# Last generated Dec 9, 2023 2:46 PM UTC.
 
 # Locals
 
