--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Dec 9, 2023 9:09 AM UTC.
+ * Last generated using `./tsconfig.mjs` Dec 9, 2023 2:46 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
