Project update. [p][robotic]

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.554",
+    "version": "1.0.555",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -261,7 +261,7 @@
             "default": "./dist/version.js"
         }
     },
-    "sideEffects": ["**/*.{css,scss,less}", "./src/preact/components/router.tsx", "./src/resources/init.ts"],
+    "sideEffects": ["**/*.{css,scss,less}", "./src/preact/components/router.tsx", "./src/resources/initialize.ts"],
     "module": "./dist/index.js",
     "main": "./dist/index.js",
     "browser": "",
