--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 9, 2023 7:24 PM UTC.
+# Last generated Dec 10, 2023 12:30 AM UTC.
 
 # Default
 
