--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Dec 9, 2023 7:24 PM UTC.
+ * Last generated using `./settings.mjs` Dec 10, 2023 12:30 AM UTC.
  */
 {
     "editor.formatOnType": false,
