--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Dec 9, 2023 7:24 PM UTC.
+# Last generated using `./wrangler.mjs` Dec 10, 2023 12:30 AM UTC.
 ##
 
 send_metrics = false
