--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Dec 10, 2023 6:06 AM UTC.
+# Last generated using `./wrangler.mjs` Dec 10, 2023 10:01 PM UTC.
 ##
 
 send_metrics = false
@@ -370,6 +370,7 @@ exclude = [
   "dist",
   "!dist",
   ".*",
+  "!.well-known",
   "*.config.*",
   "wrangler.*",
   "tsconfig.*",
