--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 10, 2023 6:06 AM UTC.
+# Last generated Dec 10, 2023 10:01 PM UTC.
 
 [production]
 node >= 20.9.0
