--- a/.dockerignore
+++ b/.dockerignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 10, 2023 6:06 AM UTC.
+# Last generated Dec 10, 2023 10:01 PM UTC.
 
 # Locals
 
@@ -211,6 +211,7 @@ dist
 # npm:Dots
 
 .*
+!.well-known
 
 # npm:Configs
 
