--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 10, 2023 6:06 AM UTC.
+# Last generated Dec 10, 2023 10:01 PM UTC.
 
 # Locals
 
@@ -219,6 +219,7 @@ dist
 # npm:Dots
 
 .*
+!.well-known
 
 # npm:Configs
 
