Project update. [p][robotic]

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Dec 10, 2023 10:01 PM UTC.
+ * Last generated using `./settings.mjs` Dec 11, 2023 4:36 PM UTC.
  */
 {
     "editor.formatOnType": false,
@@ -72,12 +72,13 @@
         "**/CODEOWNERS": "ignore",
         "**/tsconfig.{json,×××××××}": "jsonc",
         "**/.vscode/*.{json,×××××××}": "jsonc",
+        "**/src/cargo/.well-known/**/*.{json,×××××××}": "jsonc",
         "**/dist/_headers": "plaintext",
         "**/src/cargo/_headers": "plaintext",
         "**/dist/_redirects": "plaintext",
         "**/src/cargo/_redirects": "plaintext",
-        "**/src/cargo/_routes.{json,×××××××}": "jsonc",
-        "**/src/cargo/.well-known/*.{json,×××××××}": "jsonc"
+        "**/src/cargo/manifest.{json,×××××××}": "jsonc",
+        "**/src/cargo/_routes.{json,×××××××}": "jsonc"
     },
     "files.exclude": {
         "**/._*": true,
