--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 11, 2023 4:36 PM UTC.
+# Last generated Dec 12, 2023 1:22 AM UTC.
 
 # Packages
 
