--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Dec 11, 2023 4:36 PM UTC.
+# Last generated using `./wrangler.mjs` Dec 12, 2023 1:22 AM UTC.
 ##
 
 send_metrics = false
