--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 13, 2023 7:12 AM UTC.
+# Last generated Dec 13, 2023 5:26 PM UTC.
 
 [production]
 node >= 20.9.0
