--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Dec 13, 2023 7:12 AM UTC.
+# Last generated using `./wrangler.mjs` Dec 13, 2023 5:26 PM UTC.
 ##
 
 send_metrics = false
