Project update. [p][robotic]

--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 23, 2023 8:25 AM UTC.
+# Last generated Dec 24, 2023 12:54 PM UTC.
 
 # Packages
 
