--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Dec 23, 2023 8:25 AM UTC.
+ * Last generated using `./tsconfig.mjs` Dec 24, 2023 12:54 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
