--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 24, 2023 5:09 PM UTC.
+# Last generated Dec 25, 2023 8:43 AM UTC.
 
 # Packages
 
