--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Dec 24, 2023 5:09 PM UTC.
+ * Last generated using `./settings.mjs` Dec 25, 2023 8:42 AM UTC.
  */
 {
     "editor.formatOnType": false,
