--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Dec 24, 2023 5:09 PM UTC.
+# Last generated using `./wrangler.mjs` Dec 25, 2023 8:43 AM UTC.
 ##
 
 send_metrics = false
