--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.663",
+    "version": "1.0.665",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -277,7 +277,9 @@
             "./*": ["./dist/types/*"]
         }
     },
-    "dependencies": {},
+    "dependencies": {
+        "@logtail/types": "0.4.14"
+    },
     "peerDependencies": {
         "@medv/finder": "3.1.0",
         "@preact/signals": "1.2.2",
