--- a/.dockerignore
+++ b/.dockerignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 25, 2023 9:34 AM UTC.
+# Last generated Dec 26, 2023 2:15 PM UTC.
 
 # Locals
 
