--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Dec 25, 2023 9:34 AM UTC.
+# Last generated using `./wrangler.mjs` Dec 26, 2023 2:15 PM UTC.
 ##
 
 send_metrics = false
