Project update. [p][robotic]

--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Dec 26, 2023 2:15 PM UTC.
+# Last generated Jan 3, 2024 12:34 AM UTC.
 
 # Packages
 
