--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 3, 2024 1:46 AM UTC.
+# Last generated Jan 3, 2024 2:57 PM UTC.
 
 # Packages
 
