--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "publishConfig": {
         "access": "public"
     },
-    "version": "1.0.687",
+    "version": "1.0.688",
     "license": "GPL-3.0-or-later",
     "name": "@clevercanyon/utilities",
     "description": "Utilities for JavaScript apps running in any environment.",
@@ -351,7 +351,7 @@
                     },
                     "labels": {},
                     "configVersion": "1.0.9",
-                    "envsVersion": ""
+                    "envsVersion": "1.0.9"
                 },
                 "npmjs": {
                     "configVersions": "1.0.9,1.0.9"
