Project update. [p][robotic]

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Jan 7, 2024 7:08 AM UTC.
+# Last generated using `./wrangler.mjs` Jan 7, 2024 12:21 PM UTC.
 ##
 
 send_metrics = false
@@ -412,6 +412,11 @@ exclude = [
   "/a16s"
 ]
 
+[services]
+binding = "UT"
+service = "hop-gdn-utilities"
+environment = "production"
+
 [route]
 zone_name = "hop.gdn"
 pattern = "workers.hop.gdn/utilities/*"
@@ -428,6 +433,11 @@ pattern = "localhost/utilities/*"
 [env.dev.vars]
 MINIFLARE = "true"
 
+[env.dev.services]
+binding = "UT"
+service = "hop-gdn-utilities"
+environment = "dev"
+
 [env.dev.build]
 cwd = "./"
 watch_dir = "./src"
@@ -435,7 +445,12 @@ command = "VITE_WRANGLER_MODE=dev npx @clevercanyon/madrun build --mode=dev"
 
 [env.stage.route]
 zone_name = "hop.gdn"
-pattern = "workers.hop.gdn/utilities-stage/*"
+pattern = "workers.hop.gdn/stage.utilities/*"
+
+[env.stage.services]
+binding = "UT"
+service = "hop-gdn-utilities"
+environment = "stage"
 
 [env.stage.build]
 cwd = "./"
