--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 7, 2024 9:32 PM UTC.
+# Last generated Jan 8, 2024 1:51 AM UTC.
 
 [production]
 node >= 20.9.0
