--- a/.prettierignore
+++ b/.prettierignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 9, 2024 12:45 AM UTC.
+# Last generated Jan 9, 2024 1:02 PM UTC.
 
 # Packages
 
