--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 9, 2024 10:12 PM UTC.
+# Last generated Jan 10, 2024 7:49 AM UTC.
 
 # Default
 
