--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 11, 2024 9:04 PM UTC.
+# Last generated Jan 12, 2024 1:31 AM UTC.
 
 # Locals
 
