--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Jan 11, 2024 9:04 PM UTC.
+ * Last generated using `./tsconfig.mjs` Jan 12, 2024 1:31 AM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
