--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Jan 11, 2024 9:04 PM UTC.
+# Last generated using `./wrangler.mjs` Jan 12, 2024 1:31 AM UTC.
 ##
 
 send_metrics = false
