--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 13, 2024 11:47 AM UTC.
+# Last generated Jan 13, 2024 12:05 PM UTC.
 
 [production]
 node >= 20.9.0
