--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 13, 2024 11:47 AM UTC.
+# Last generated Jan 13, 2024 12:05 PM UTC.
 
 # Locals
 
