Project update. [p][robotic]

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 31, 2024 9:55 AM UTC.
+# Last generated Jan 31, 2024 12:17 PM UTC.
 
 # Default
 
