Project update. [p][robotic]

--- a/.browserslistrc
+++ b/.browserslistrc
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 31, 2024 12:46 PM UTC.
+# Last generated Feb 1, 2024 4:54 AM UTC.
 
 [production]
 node >= 20.9.0
