--- a/.npmignore
+++ b/.npmignore
@@ -25,7 +25,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Jan 31, 2024 12:46 PM UTC.
+# Last generated Feb 1, 2024 4:54 AM UTC.
 
 # Locals
 
