--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./settings.mjs`.
  *
- * Last generated using `./settings.mjs` Jan 31, 2024 12:46 PM UTC.
+ * Last generated using `./settings.mjs` Feb 1, 2024 4:54 AM UTC.
  */
 {
     "editor.formatOnType": false,
