--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Jan 31, 2024 12:46 PM UTC.
+# Last generated using `./wrangler.mjs` Feb 1, 2024 4:54 AM UTC.
 ##
 
 send_metrics = false
