Project update. [p][robotic]

--- a/.dockerignore
+++ b/.dockerignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 8, 2024 9:55 PM UTC.
+# Last generated Feb 9, 2024 4:43 AM UTC.
 
 # Locals
 
