--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Feb 8, 2024 9:55 PM UTC.
+# Last generated using `./wrangler.mjs` Feb 9, 2024 4:43 AM UTC.
 ##
 
 send_metrics = false
