--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 11, 2024 7:22 PM UTC.
+# Last generated Feb 12, 2024 4:52 AM UTC.
 
 # Locals
 
