--- a/.vscodeignore
+++ b/.vscodeignore
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 19, 2024 3:28 AM UTC.
+# Last generated Feb 21, 2024 6:19 PM UTC.
 
 # Locals
 
