--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
  * @note This entire file will be updated automatically.
  * @note Instead of editing here, please review `./tsconfig.mjs`.
  *
- * Last generated using `./tsconfig.mjs` Feb 19, 2024 3:28 AM UTC.
+ * Last generated using `./tsconfig.mjs` Feb 21, 2024 6:19 PM UTC.
  */
 {
     "include": ["./src/**/*", "./dev-types.d.ts"],
