--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,7 +7,7 @@
 # @note This entire file will be updated automatically.
 # @note Instead of editing here, please review `./wrangler.mjs`.
 #
-# Last generated using `./wrangler.mjs` Feb 19, 2024 3:28 AM UTC.
+# Last generated using `./wrangler.mjs` Feb 21, 2024 6:19 PM UTC.
 ##
 
 send_metrics = false
