Project update. [p][robotic]

--- a/.gitattributes
+++ b/.gitattributes
@@ -17,7 +17,7 @@
 # Generated data.
 # <generated:start>
 
-# Last generated Feb 21, 2024 9:32 PM UTC.
+# Last generated Feb 22, 2024 4:07 AM UTC.
 
 # Default
 
